<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="?android:attr/buttonBarButtonStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Lista2" >

    <Button
        android:id="@+id/Atras"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onBackClick"
        android:text="@string/back" />

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Atras"
        android:layout_below="@+id/Delete" >
    </ListView>

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/Atras"
        android:layout_toRightOf="@+id/Atras"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/Delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Atras"
        android:layout_below="@+id/Atras"
        android:onClick="onDeleteButtonClicked"
        android:text="@string/delete_button_label"
        android:visibility="invisible" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@android:id/list"
        android:layout_alignRight="@android:id/list"
        android:onClick="onAddItemClick4"
        android:text="@string/additem" />

</RelativeLayout>